tests/negative_examples/fail_union.rs
use electroplate::Electroplate;

#[derive(Electroplate)]
union DummyUnion {
    f1: u32,
    f2: u32,
}
